// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionsListSelectors should handle pending state on a product ID: pending 1`] = `
Object {
  "error": false,
  "fulfilled": false,
  "itemCount": 0,
  "listData": Array [],
  "pending": true,
  "query": Object {},
  "status": undefined,
}
`;

exports[`SubscriptionsListSelectors should map a fulfilled product ID response to an aggregated output: fulfilled 1`] = `
Object {
  "error": false,
  "fulfilled": true,
  "itemCount": 0,
  "listData": Array [
    Object {
      "nextEventDate": null,
      "nextEventType": null,
      "physicalCapacity": 2,
      "productName": null,
      "quantity": null,
      "serviceLevel": null,
      "sku": null,
      "subscriptions": null,
      "totalCapacity": 3,
      "uom": null,
      "usage": null,
      "virtualCapacity": 1,
    },
    Object {
      "nextEventDate": null,
      "nextEventType": null,
      "physicalCapacity": 2,
      "productName": null,
      "quantity": null,
      "serviceLevel": null,
      "sku": null,
      "subscriptions": null,
      "totalCapacity": 3,
      "uom": null,
      "usage": null,
      "virtualCapacity": 1,
    },
  ],
  "pending": false,
  "query": Object {
    "sla": "premium",
  },
  "status": undefined,
}
`;

exports[`SubscriptionsListSelectors should pass minimal data on a product ID without a product ID provided: no product id error 1`] = `
Object {
  "error": false,
  "fulfilled": false,
  "itemCount": 0,
  "listData": Array [],
  "pending": false,
  "query": Object {},
  "status": undefined,
}
`;

exports[`SubscriptionsListSelectors should pass minimal data on missing a reducer response: missing reducer error 1`] = `
Object {
  "error": false,
  "fulfilled": false,
  "itemCount": 0,
  "listData": Array [],
  "pending": false,
  "query": Object {},
  "status": undefined,
}
`;

exports[`SubscriptionsListSelectors should populate data from the in memory cache: cached data: ERROR, cancelled API call, maintain prior response 1`] = `
Object {
  "error": false,
  "fulfilled": true,
  "itemCount": 0,
  "listData": Array [
    Object {
      "nextEventDate": null,
      "nextEventType": null,
      "physicalCapacity": 3,
      "productName": null,
      "quantity": null,
      "serviceLevel": null,
      "sku": null,
      "subscriptions": null,
      "totalCapacity": 6,
      "uom": null,
      "usage": null,
      "virtualCapacity": 3,
    },
  ],
  "pending": false,
  "query": Object {
    "sla": "premium",
  },
  "status": undefined,
}
`;

exports[`SubscriptionsListSelectors should populate data from the in memory cache: cached data: cache used and pending 1`] = `
Object {
  "error": false,
  "fulfilled": true,
  "itemCount": 0,
  "listData": Array [
    Object {
      "nextEventDate": null,
      "nextEventType": null,
      "physicalCapacity": 2,
      "productName": null,
      "quantity": null,
      "serviceLevel": null,
      "sku": null,
      "subscriptions": null,
      "totalCapacity": 3,
      "uom": null,
      "usage": null,
      "virtualCapacity": 1,
    },
  ],
  "pending": false,
  "query": Object {
    "sla": "premium",
  },
  "status": undefined,
}
`;

exports[`SubscriptionsListSelectors should populate data from the in memory cache: cached data: initial fulfilled 1`] = `
Object {
  "error": false,
  "fulfilled": true,
  "itemCount": 0,
  "listData": Array [
    Object {
      "nextEventDate": null,
      "nextEventType": null,
      "physicalCapacity": 2,
      "productName": null,
      "quantity": null,
      "serviceLevel": null,
      "sku": null,
      "subscriptions": null,
      "totalCapacity": 3,
      "uom": null,
      "usage": null,
      "virtualCapacity": 1,
    },
  ],
  "pending": false,
  "query": Object {
    "sla": "premium",
  },
  "status": undefined,
}
`;

exports[`SubscriptionsListSelectors should populate data from the in memory cache: cached data: query updated and fulfilled 1`] = `
Object {
  "error": false,
  "fulfilled": true,
  "itemCount": 0,
  "listData": Array [
    Object {
      "nextEventDate": null,
      "nextEventType": null,
      "physicalCapacity": 5,
      "productName": null,
      "quantity": null,
      "serviceLevel": null,
      "sku": null,
      "subscriptions": null,
      "totalCapacity": 10,
      "uom": null,
      "usage": null,
      "virtualCapacity": 5,
    },
  ],
  "pending": false,
  "query": Object {
    "sla": "",
  },
  "status": undefined,
}
`;

exports[`SubscriptionsListSelectors should populate data from the in memory cache: cached data: updated and fulfilled 1`] = `
Object {
  "error": false,
  "fulfilled": true,
  "itemCount": 0,
  "listData": Array [
    Object {
      "nextEventDate": null,
      "nextEventType": null,
      "physicalCapacity": 3,
      "productName": null,
      "quantity": null,
      "serviceLevel": null,
      "sku": null,
      "subscriptions": null,
      "totalCapacity": 6,
      "uom": null,
      "usage": null,
      "virtualCapacity": 3,
    },
  ],
  "pending": false,
  "query": Object {
    "sla": "premium",
  },
  "status": undefined,
}
`;

exports[`SubscriptionsListSelectors should populate data on a product ID when the api response is missing expected properties: data populated, missing properties 1`] = `
Object {
  "error": false,
  "fulfilled": true,
  "itemCount": 0,
  "listData": Array [
    Object {
      "nextEventDate": null,
      "nextEventType": null,
      "physicalCapacity": 2,
      "productName": null,
      "quantity": null,
      "serviceLevel": null,
      "sku": null,
      "subscriptions": null,
      "totalCapacity": 3,
      "uom": null,
      "usage": null,
      "virtualCapacity": 1,
    },
    Object {
      "nextEventDate": null,
      "nextEventType": null,
      "physicalCapacity": 2,
      "productName": null,
      "quantity": null,
      "serviceLevel": null,
      "sku": null,
      "subscriptions": null,
      "totalCapacity": 3,
      "uom": null,
      "usage": null,
      "virtualCapacity": 1,
    },
  ],
  "pending": false,
  "query": Object {
    "sla": "premium",
  },
  "status": undefined,
}
`;

exports[`SubscriptionsListSelectors should return specific selectors: selectors 1`] = `
Object {
  "makeSubscriptionsList": [Function],
  "subscriptionsList": [Function],
}
`;
